<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">Astrid Swim</string>

    <string name="hour">Hours</string>
    <string name="students">Students</string>

    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="error">Eroare</string>

<!--    pagine de setari-->
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="selectLanguage">Select language</string>
    <string name="restartApp">Please restart the aplication</string>
    <string name="darkMode">Dark mode</string>
    <string name="notifications">Notifications</string>

<!--    timepicker-->
    <string name="startTime">Start hour</string>
    <string name="endTime">End hour</string>

<!--    chat-->
    <string name="type_a_message">Type a message</string>
    <string name="you">You</string>
    <string name="deleteMessage">Delete message?</string>
    <string name="messageDeleted">Message deleted</string>
    <string name="messageNotDeleted">Message could not be deleted</string>
    <string name="emptyMsg">You cannot send an empty message</string>
    <string name="newMessage">New message</string>
    <string name="delivered">Delivered</string>
    <string name="seen">Seen</string>

<!--    register-->
    <string name="firstName">First Name </string>
    <string name="lastName">Last Name</string>
    <string name="registerLogin">Register / Sign In</string>
    <string name="invalidNumber">Invalid phone number</string>
    <string name="checkCode">Code has been sent, please check</string>
    <string name="emptyCode">Please write verification code first</string>
    <string name="codeVerif">Code verification</string>
    <string name="pleaseWaitVerif">Please wait to verify code number</string>
    <string name="validNumber">Please write a valid phone number</string>
    <string name="checkNumber">Phone number verification</string>
    <string name="waitNumber">Please wait for registration code</string>
    <string name="validAdmNumber">Please write a valid admin phone number</string>
    <string name="codeSent">Code sent</string>

<!--    cursuri admin-->
    <string name="alerDialog_deleteHour">Are you sure you want to delete this hour?</string>
    <string name="courseDeleted">Course deleted</string>
    <string name="courseNotDeleted">Course could not be deleted</string>
    <string name="selectHour">Please select start hour</string>

<!--    cursuri user-->
    <string name="unscheduleHour">Unschedule from this hour?</string>
    <string name="unscheduled">Unscheduled</string>
    <string name="nothingDeleted">Nothing to delete</string>
    <string name="scheduleHour">Schedule at this hour?</string>
    <string name="alreadyScheduled">Already scheduled</string>
    <string name="scheduled">Scheduled</string>
    <string name="tooMany">Too many</string>

    <!--    sterge sau adauga useri, de la admin-->
    <string name="deleteName">Delete name?</string>
    <string name="addName">Add name?</string>
    <string name="whatToDo">What do you want to do?</string>
    <string name="hasBeenScheduled">Scheduled you at</string>
    <string name="hasSchedule">Has scheduled at</string>
    <string name="hasBeenUnscheduled">Unscheduled you from</string>
    <string name="hasUnschedule">Has unscheduled from</string>
    <string name="clearAll">Clear all</string>
    <string name="addAll">Select all</string>

<!--    zilele saptamanii admin-->
    <string name="m">M</string>
    <string name="tu">T</string>
    <string name="w">W</string>
    <string name="thu">T</string>
    <string name="f">F</string>
    <string name="sa">S</string>
    <string name="su">S</string>

    <!--    zilele saptamanii user-->
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
</resources>