<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@android:style/Animation.Activity"
    style="@style/CustomActivityAnimation"
    tools:context=".Days.MondayAdmin"
    android:background="@color/Grey">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/days_relativelayout">

    <FrameLayout
        android:id="@+id/main_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Grey"/>
    </ScrollView>

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gradientBlue"
        android:theme="@style/AppTheme.AppBarOverlay">
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/days_relativelayout"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linear_layout_weekdays">

        <TextView
            android:id="@+id/btn_monday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/btns_days_white"
            android:gravity="center_horizontal"
            android:text="@string/m"
            android:textSize="0.2in"/>
        <TextView
            android:id="@+id/btn_tuesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/btns_days_white"
            android:gravity="center_horizontal"
            android:text="@string/tu"
            android:textSize="0.2in"/>
        <TextView
            android:id="@+id/btn_wednesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/btns_days_white"
            android:gravity="center_horizontal"
            android:text="@string/w"
            android:textSize="0.2in"/>
        <TextView
            android:id="@+id/btn_thursday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/btns_days_white"
            android:gravity="center_horizontal"
            android:text="@string/thu"
            android:textSize="0.2in"/>
        <TextView
            android:id="@+id/btn_friday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/btns_days_white"
            android:gravity="center_horizontal"
            android:text="@string/f"
            android:textSize="0.2in"/>
        <TextView
            android:id="@+id/btn_saturday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/btns_days_white"
            android:gravity="center_horizontal"
            android:text="@string/sa"
            android:textSize="0.2in"/>
        <TextView
            android:id="@+id/btn_sunday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/btns_days_white"
            android:gravity="center_horizontal"
            android:text="@string/su"
            android:textSize="0.2in"/>

<!--        <com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--            android:id="@+id/btn_monday"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="5dp"-->
<!--            android:tooltipText="Monday"-->
<!--            app:backgroundTint="@color/White"-->
<!--            android:src="@drawable/ic_button_monday_black"-->
<!--            app:fabSize="mini" />-->

<!--        <com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--            android:id="@+id/btn_tuesday"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="5dp"-->
<!--            android:tooltipText="Tuesday"-->
<!--            app:backgroundTint="@color/White"-->
<!--            android:src="@drawable/ic_button_tuandthu_black"-->
<!--            app:fabSize="mini" />-->

<!--        <com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--            android:id="@+id/btn_wednesday"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="5dp"-->
<!--            android:tooltipText="Wednesday"-->
<!--            app:backgroundTint="@color/White"-->
<!--            android:src="@drawable/ic_button_wednesday_black"-->
<!--            app:fabSize="mini" />-->

<!--        <com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--            android:id="@+id/btn_thursday"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="5dp"-->
<!--            android:tooltipText="Thursday"-->
<!--            app:backgroundTint="@color/White"-->
<!--            android:src="@drawable/ic_button_tuandthu_black"-->
<!--            app:fabSize="mini" />-->

<!--        <com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--            android:id="@+id/btn_friday"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="5dp"-->
<!--            android:tooltipText="Friday"-->
<!--            app:backgroundTint="@color/White"-->
<!--            android:src="@drawable/ic_button_friday_black"-->
<!--            app:fabSize="mini" />-->

<!--        <com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--            android:id="@+id/btn_saturday"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="5dp"-->
<!--            android:tooltipText="Saturday"-->
<!--            app:backgroundTint="@color/White"-->
<!--            android:src="@drawable/ic_button_satandsun_black"-->
<!--            app:fabSize="mini" />-->

<!--        <com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--            android:id="@+id/btn_sunday"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="5dp"-->
<!--            android:tooltipText="Sunday"-->
<!--            app:backgroundTint="@color/White"-->
<!--            android:src="@drawable/ic_button_satandsun_black"-->
<!--            app:fabSize="mini" />-->

    </LinearLayout>
</RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="end|bottom"
        android:layout_margin="15dp"
        android:elevation="10dp"
        app:backgroundTint="@color/gradientBlue"
        android:src="@drawable/ic_button_add"
        android:id="@+id/btn_add"
        android:tooltipText="Add course"
        android:layout_alignParentRight="true" />

</RelativeLayout>