<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.parentsapp.PhoneConnections.UserPhoneRegister">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/registerLayout"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_below="@+id/toolbar"
        android:padding="16dp"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerLogin"
            android:textColor="#000"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/firstName"
            android:layout_marginTop="10dp"
            app:met_floatingLabel="normal"
            android:hint="@string/firstName"
            android:autofillHints="firstName"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lastName"
            android:layout_marginTop="10dp"
            app:met_floatingLabel="normal"
            android:hint="@string/lastName"
            android:autofillHints="lastName"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/phone_number"
            android:inputType="phone"
            android:layout_marginTop="10dp"
            app:met_floatingLabel="normal"
            android:hint="Phone Number"
            android:autofillHints="phoneNumber"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/admin_phone_number"
            android:inputType="phone"
            android:layout_marginTop="10dp"
            app:met_floatingLabel="normal"
            android:hint="Admin Phone Number"
            android:visibility="visible"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Submit"
            android:id="@+id/btn_register"
            android:layout_marginTop="10dp"
            android:background="@color/gradientBlue"
            android:textColor="#ffffff"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/phoneAuth"
        android:orientation="vertical"
        android:layout_below="@+id/codeVerifLayout"
        android:gravity="center_vertical"
        android:visibility="gone">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/codeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="100dp"
        android:layout_margin="25dp"
        android:hint="Enter code"
        android:inputType="phone"
        android:singleLine="true"
        android:textColor="#000" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="Continue"
        android:id="@+id/btn_continue"
        android:layout_marginTop="10dp"
        android:background="@color/gradientBlue"
        android:textColor="#ffffff"
        android:layout_below="@id/codeText"/>

    </LinearLayout>
</RelativeLayout>